# PDF_OCR

./: .gitignore  README.md  annotate.sh  main.py  pyproject.toml
Src/: cli.py  ocr_processor.py
cli/: main.py
core/: ocr_pipeline.py  pdf_utils.py  toc_generator.py
notebook/: analysis.ipynb
src/: annotator.py  easyOcr.py  main.py  pymu.py  test.py
training_project/: README.md  debug_project_struct.py  debug_train.py  simple_test.py
training_project/config/: config.yaml  cpu_fallback.yaml  mps_optimized.yaml  schema.json  settings.py
training_project/scripts/: autocomplete-setup.sh  predict.py  train.py
training_project/scripts/completions/: _train.py  _train_fzf.py  completion.bash  completion.zsh
training_project/src/: predictor.py  trainer.py  utils.py
