[project]
name = "pdf-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.2.6",
    "opencv-contrib-python>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pymupdf>=1.26.0",
    "pypdf2>=3.0.1",
    "pypdfium2>=4.30.1",
    "pytesseract>=0.3.13",
    "reportlab>=4.4.1",
    "spacy>=3.8.7",
    "spacy-layout>=0.0.12",
    "typer>=0.16.0",
]
