[project]
name = "pdf-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argcomplete>=3.6.2",
    "docling>=2.36.1",
    "itermplot>=0.331",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.2.6",
    "ocrmypdf>=16.10.2",
    "opencv-contrib-python>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pip>=25.1.1",
    "pymupdf>=1.26.0",
    "pypdf2>=3.0.1",
    "pypdfium2>=4.30.1",
    "pytesseract>=0.3.13",
    "pyyaml>=6.0.2",
    "reportlab>=4.4.1",
    "spacy>=3.8.7",
    "spacy-layout>=0.0.12",
    "typer>=0.16.0",
    "ultralytics>=8.3.151",
]
